syntax = "proto3";

option java_package = "hmda.persistence.model.serialization";
option optimize_for = SPEED;

import "TransmittalSheet.proto";

message SVStateMessage {
   repeated string syntacticalEdits = 1;
   repeated string validityEdits = 2;
}

message QMStateMessage {
    repeated string qualityEdits = 1;
    repeated string macroEdits = 2;
}

message HmdaVerificationStateMessage {
    bool qualityVerified = 1;
    bool macroVerified = 2;
    TransmittalSheetMessage ts = 3;
    int32 larCount = 4;
}
